# ThetisLink

./: .gitignore  ATTRIBUTION.md  CHANGELOG.md  Cargo.toml  Credits.md  Installatie.md  Installation.md  LICENSE-COMMERCIAL.md  NOTICE.md  README.md  Technical-Reference.md  Technische-Referentie.md  User-Manual-EN.md  User-Manual.md  about.toml  build-macos.sh
.github/workflows/: guard.yml
compliance/: THIRD-PARTY-LICENSES.html  sbom.spdx.json
docs/: Netwerk-uitleg.html  Network-explained.html  VRX-explained.html  VRX-uitleg.html  index.html  stockcorner-tuner-serial-interface.md
docs-book/: .gitignore  README.md  book.toml  build-docs.ps1  custom.css  export-pdf.ps1  sync-docs.ps1
docs-book/src/: index.md  installatie.md  installation.md  technical-reference.md  technische-referentie.md  user-manual-en.md  user-manual.md
scripts/: README.md  check-ui-coverage.sh  evidence-scan.sh  sync-to-public.sh  ui-coverage-expected.json
sdr-remote-android/android/: build.gradle.kts  settings.gradle.kts
sdr-remote-android/android/app/: build.gradle.kts
sdr-remote-android/android/app/src/main/: AndroidManifest.xml
sdr-remote-android/android/app/src/main/java/com/sdrremote/: MainActivity.kt  SdrUiState.kt
sdr-remote-android/android/app/src/main/java/com/sdrremote/nsd/: MdnsDiscovery.kt
sdr-remote-android/android/app/src/main/java/com/sdrremote/service/: AudioRouting.kt  AudioService.kt  MidiController.kt
sdr-remote-android/android/app/src/main/java/com/sdrremote/ui/components/: ConnectionPanel.kt  FrequencyDisplay.kt  MidiSettingsDialog.kt  PttButton.kt  RadioControls.kt  SettingsDialog.kt  SpectrumView.kt  StatsPanel.kt
sdr-remote-android/android/app/src/main/java/com/sdrremote/ui/screens/: ConnectWizard.kt  ExternalDevicesScreen.kt  MainScreen.kt
sdr-remote-android/android/app/src/main/java/com/sdrremote/ui/theme/: Theme.kt
sdr-remote-android/android/app/src/main/java/com/sdrremote/viewmodel/: SdrViewModel.kt
sdr-remote-android/android/app/src/main/java/uniffi/sdr_remote/: sdr_remote.kt
sdr-remote-android/src/: bridge.rs  sdr_remote.udl
sdr-remote-client/: Cargo.toml
sdr-remote-client/src/: audio.rs  catsync.rs  main.rs  mdns.rs  midi.rs  websdr.rs
sdr-remote-client/src/ui/: config.rs  devices.rs  ftx1_ex_chart.rs  helpers.rs  meters.rs  mod.rs  screens.rs  spectrum.rs  theme.rs  window_placement.rs  wizard.rs  yaesu_memory.rs
sdr-remote-client/src/ui/controls/: band.rs  frequency.rs  mode.rs
sdr-remote-core/src/: codec.rs  jitter.rs  lib.rs  protocol.rs
sdr-remote-logic/src/: commands.rs  engine.rs  i18n.rs  lib.rs  state.rs  wav.rs
sdr-remote-logic/tests/: connect_state_machine.rs
sdr-remote-server/: Cargo.toml
sdr-remote-server/src/: amplitec.rs  audio_loops.rs  audio_stats.rs  config.rs  ctun_recenter.rs  dxcluster.rs  main.rs  mcp2221_debug.rs  mcp2221_scan.rs  mcp2221_yaesu_rotor.rs  mdns.rs  network.rs  power_cap.rs  pstrotator.rs  pstrotator_listen.rs  ptt.rs  rf2k.rs  rotor.rs  session.rs  spe_expert.rs  spectrum.rs  tci.rs  tci_commands.rs  tci_parser.rs  tuner.rs  ultrabeam.rs  vrx_bridge.rs  yaesu.rs
sdr-remote-server/src/ui/: amplitec.rs  mod.rs  rf2k.rs  rotor.rs  spe.rs  status_panel.rs  tuner.rs  ultrabeam.rs  utils.rs
vrx-rs/: Cargo.toml
vrx-rs/src/: channelizer.rs  config.rs  lib.rs  opus.rs  runtime.rs  wav.rs
