[workspace]
members = [
    "sdr-remote-core",
    "sdr-remote-logic",
    "sdr-remote-server",
    "sdr-remote-client",
    "sdr-remote-android",
    "vrx-rs",
]
resolver = "2"

[workspace.package]
version = "2.3.0"
edition = "2021"
license = "GPL-2.0-or-later"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
audiopus = "0.3.0-rc.0"
cpal = "0.15"
rubato = "0.14"
ringbuf = "0.4"
eframe = "0.29"
egui = "0.29"
bytemuck = { version = "1", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-appender = "0.2"
anyhow = "1"
serialport = "4.7"
midir = "0.10"

# Optimize dependencies even in dev mode (Opus/rubato are too slow unoptimized)
[profile.dev.package."*"]
opt-level = 2

# Local fork of mcp2221-hal: adds `connect_with_serial` and `list_devices` so
# we can drive two MCP2221A boards (one per StockCorner tuner) from the same
# host. Upstream 0.1.0 only exposes `connect()` which always returns the first
# device matching VID/PID. The fork keeps the same crate-version and licence
# (Apache-2.0 OR MIT) so callers see no API surface change beyond the
# additions. See `vendor/mcp2221-hal/` for the diff.
[patch.crates-io]
mcp2221-hal = { path = "vendor/mcp2221-hal" }
