[package]
name = "sdr-remote-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "ThetisLink-Server"
path = "src/main.rs"

[dependencies]
sdr-remote-core = { path = "../sdr-remote-core" }
vrx-rs = { path = "../vrx-rs" }
tokio = { workspace = true }
cpal = { workspace = true }
rubato = { workspace = true }
ringbuf = { workspace = true }
eframe = { workspace = true }
egui = { workspace = true }
qrcode = "0.14"
bytemuck = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
anyhow = { workspace = true }
rustfft = "6"
socket2 = "0.5"
serialport = { workspace = true }
chrono = "0.4"
tokio-tungstenite = { version = "0.24", features = ["connect"] }
futures-util = "0.3"
url = "2"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# PATCH-3: mDNS service advertise (`_thetislink._udp.local.`) for
# local-network discovery. Apache-2.0 OR MIT — GPL-2.0-or-later compatible.
# Pure-Rust, no system deps on Windows.
mdns-sd = "=0.19.1"
# Adafruit MCP2221A breakout — used for the StockCorner JC-4s tuner bridge
# (GP0 → 2N7000 gate for grey-wire start, GP1 → ADC for yellow tune-status).
# Server only exposes a debug panel for now; full tuner integration is a
# follow-up patch. See docs/internal/referentie/MCP2221A-JC4s-wiring.md.
mcp2221-hal = "0.1"

[build-dependencies]
winresource = "0.1"
